src/test/ui/non-copyable-void.stderr
error[E0599]: no method named `clone` found for type `libc::c_void` in the current scope
  --> $DIR/non-copyable-void.rs:11:23
   |
LL |         let _z = (*y).clone();
   |                       ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
